<?xml version="1.0"?>
<package format="3">
  <name>franka_example_controllers</name>
  <version>0.7.0</version>
  <description>franka_example_controllers provides example code for controlling Franka Emika research robots with ros_control</description>
  <maintainer email="support@franka.de">Franka Emika GmbH</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/franka_example_controllers</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>
  <author>Franka Emika GmbH</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rcutils</build_depend>
  <build_depend>realtime_tools</build_depend>

  <exec_depend>angles</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>realtime_tools</exec_depend>

  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>controller_manager</test_depend>

  <!--<build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rospy</exec_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
