<?xml version="1.0"?>
<?xml-model 
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_msgs</name>
  <version>0.7.0</version>
  <description>franka_msgs provides messages specific to Franka Emika research robots</description>
  <maintainer email="support@franka.de">Franka Emika GmbH</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/franka_msgs</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>
  <author>Franka Emika GmbH</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>default_idl_generators</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
